# Homomorphic-Heatmap

./: README.md
src/: install_third_party_libs.sh  run_full_domain.sh  run_split_domain.sh
src/full_domain/: CMakeLists.txt  testvectors.cpp  testvectors.h
src/install_scripts/: install_SEAL.sh  install_flint.sh
src/install_scripts/our_seal_files/: keygenerator.cpp  keygenerator.h
src/split_domain/: CRT_FFT.cpp  CRT_FFT.h  FV.cpp  FV.h  HomomorphicHeatmap.cpp  HomomorphicHeatmap.h  Makefile  PolyCRT_FFT.cpp  PolyCRT_FFT.h  PolynomialMultiplier.cpp  PolynomialMultiplier.h  fft.cpp  fft.h  test_HomomorphicHeatmap.cpp  utils.cpp  utils.h
